# compositional_logger

./: LICENSE  README.md  pyproject.toml  setup.py
compositional_logger/: CLogger.py  __init__.py
